tests/rename/should_fail/T17594b_th.stderr
T17594b_th.hs:9:6: error: [GHC-78249]
    Illegal invisible type pattern: @(t)
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

